tests/syntax_error/missing_self.jou
class Foo:
    def bar() -> void: # Error: error when defining method bar() bacause it has no self
        return

def main() -> int:
    f = Foo{}
    f.bar()
    return 0
